<resources>
    <string name="app_name">Quico Tech</string>
    <string name="app_name_first_part">Quico</string>
    <string name="app_name_second_part">Quico</string>
    <string name="skip_btn_txt">skip</string>
    <string name="intro_first_slide_desc">Shop from a large amount \nof speacial electronic products \nand get them right to your door</string>
    <string name="intro_first_slide_title">Shop What \nYou Desire</string>
    <string name="intro_second_slide_title"><![CDATA[Maintenance \n & Recovery]]></string>
    <string name="intro_second_slide_desc"><![CDATA[Fill out our Maintenance & Recovery forms \nand get your products repaired at instant \nwith our professional team]]></string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="no_items_in_list">No items in the list</string>
    <string name="no_item">Sorry, Item is not found</string>
    <string name="no_items">No Items are not found</string>
    <string name="dont_have_shop_item">You don\'t have any shop item</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="total_tax_includes">Total(Tax Included)</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="total_cart_item">Total: %1$s</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_payment_method">Select your preferred payment method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="add_new_card">Add new card</string>
    <string name="next">Next</string>
    <string name="add_card"><u>Add Card</u></string>
    <string name="address">Address</string>
    <string name="select_your_address">Select your address</string>
    <string name="email_verification_example">Enter the confirmation code that we sent to your
Email at example@gmail.com.</string>
    <string name="verify">Verify</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="thank_you">Thank You</string>
    <string name="payment_successful">Your Payment was successful</string>
    <string name="go_home">Go Home</string>
    <string name="add_new_address">Add new address</string>
    <string name="edit_address">Edit address</string>
    <string name="profile">Profile</string>
    <string name="card">Card</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="done_orders">Done Orders</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="faq">FAQ</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="my_cards">My Cards</string>
    <string name="safe_information">Your information is safe with us</string>
    <string name="try_again">Try again</string>
    <string name="visa">Visa</string>
    <string name="new_card">New Card</string>
    <string name="card_number">Card number</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_expiration">Expiration MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="contact_name">Contact Name</string>
    <string name="mobile">Mobile</string>
    <string name="street_example">Street address, P.O.  box, etc.</string>
    <string name="apartment_example">Apt, Suite, Unit, etc.</string>
    <string name="state_province">State / Province / County</string>
    <string name="city">City</string>
    <string name="postal_code">Zip / Postal Code</string>
    <string name="set_default_shipping_address">Set as default shipping address</string>
    <string name="lebanon">Lebanon</string>
    <string name="default_address">Default</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_default">Set as default</string>
    <string name="no_addresses">No addresses are found</string>
    <string name="no_orders">No orders are found</string>
    <string name="error_msg">Something went wrong please try again</string>
    <string name="check_connection">Please check your connection</string>
    <string name="verification">Verification</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="phone_confirmation_code">Enter the confirmation code that we sent to your Phone number.</string>
    <string name="email_confirmation_code">We have sent you a verification link to your Email at %1$s .</string>
    <string name="email_verification">Email Verification </string>
    <string name="verify_link">Please open your Email to verify the link.</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="or">OR</string>
    <string name="call"><u>Call</u></string>
    <string name="order_history">Order History </string>
    <string name="orders">Orders</string>
    <string name="order_number">Order Number: %1$s</string>
    <string name="delivered_to">Delivered To: %1$s</string>
    <string name="track_order">Track Order</string>
    <string name="canceled">Canceled</string>
    <string name="delivered">Delivered</string>
    <string name="all">All</string>
    <string name="services">Services</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you Sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="birthday_example">1990-01-01</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="available_shipping_method">What Shipping Methods Are Available?</string>
    <string name="available_shipping_method_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sapien lorem, consectetur et turpis id, blandit interdum metus. Morbi sed ligula id elit mollis
efficitur ut nec ligula. Proin erat magna, pellentesque at elementum at, eleifend a tortor.</string>
    <string name="delivery_estimation_time">How Long Will it Take To Get My Package?</string>
    <string name="delivery_estimation_time_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sapien lorem, consectetur et turpis id, blandit interdum metus. Morbi sed ligula id elit mollis
efficitur ut nec ligula. Proin erat magna, pellentesque at elementum at, eleifend a tortor.</string>
    <string name="how_to_track_order">How Do I Track My Order?</string>
    <string name="how_to_track_order_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sapien lorem, consectetur et turpis id, blandit interdum metus. Morbi sed ligula id elit mollis
efficitur ut nec ligula. Proin erat magna, pellentesque at elementum at, eleifend a tortor.</string>
    <string name="need_account_to_place_order">Do I Need A Account To Place Order?</string>
    <string name="need_account_to_place_order_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sapien lorem, consectetur et turpis id, blandit interdum metus. Morbi sed ligula id elit mollis
efficitur ut nec ligula. Proin erat magna, pellentesque at elementum at, eleifend a tortor.</string>
    <string name="maintenance_and_recovery"><![CDATA[Maintenance & Recovery]]></string>
    <string name="repair">Repair</string>
    <string name="repair_description">QQuico Tech provide a wide range of repairing
services, Our Certified Techs will fix any
computer problems. Bring it to us for a FREE
Diagnostic !! Submit a request now!!!</string>
    <string name="data_recovery">Data Recovery</string>
    <string name="data_recovery_description">Quico Tech offers a capable set of professional DATA RECOVERY services for Individuals, Small-Businesses, and Enterprise-Level Systems.</string>
    <string name="it_services">It Services</string>
    <string name="it_services_description">Quico Tech proposes some IT SERVICES for Individuals, Small-Businesses, Mid-Sized and Large Enterprises.</string>
    <string name="maintenance_services">Maintenance Services</string>
    <string name="maintenance_services_description">Quico Tech provide a wide range of repairing
services, Our Certified Techs will fix any
computer problems. Bring it to us for a FREE
Diagnostic !! Submit a request now!!!</string>
    <string name="door_to_door">Door-To-Door</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="drop_repair_center">Drop it at our repairing center</string>
    <string name="problem_description">Brief description of the problem</string>
    <string name="upload_images">Upload Images</string>
    <string name="submit_request">Submit Request</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="request_submitted">Your Request Has Been Submitted.</string>
    <string name="no_services">No Services are found.</string>
    <string name="choose_delivery_type">Please choose the delivery type.</string>
    <string name="ok">OK</string>
    <string name="service_name_id"><![CDATA[Service Name & ID]]></string>
    <string name="request_received">Request Received</string>
    <string name="waiting_response">Waiting Response</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">completed</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="email_example">Example@gmail.com</string>
    <string name="login">Login</string>
    <string name="singup">Signup</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="dont_have_account">Do have an account?</string>
    <string name="continue_as_guest"><u>Continue As a guest</u></string>
    <string name="register">Register</string>
    <string name="your_full_name">YOUR FULL NAME</string>
    <string name="phone_number_example">00 000 000</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account">Already have an account?</string>
    <string name="required_field">Required Field</string>
    <string name="invalid_phone_number">Please enter 8 digit number</string>
    <string name="wrong_otp">Please enter 8 digit number</string>
    <string name="wrong_password">Invalid password format. Use minimum 8 digits with capital letter and numbers</string>
    <string name="wrong_email">Please enter a valid email example@gmail.com</string>
    <string name="mismatch_password">Mismatch Passwords</string>
    <string name="error">Error</string>
    <string name="connection">Connection</string>
    <string name="invalid_otp">Invalid code</string>
    <string name="logged_out">Loggoud out successfully!</string>
    <string name="no_cards">No orders are found</string>
    <string name="change_password">Change Password</string>
    <string name="filters">Filters</string>
    <string name="no_search_result">No Search Result</string>
    <string name="no_search_result_msg">There is no match product with your keywords</string>
    <string name="search_hint">Search</string>
    <string name="filter_by_categories">Filter By Categories</string>
    <string name="categories">Categories</string>
    <string name="forget_password">Forget Password</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="vip_terms_conditions">VIP Terms and Conditions</string>
</resources>