<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragment.AddressFragment">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        style="@style/addressTextStyle"
        android:hint="@string/contact_name" />

    <LinearLayout
        android:id="@+id/phoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColorHint="@color/gray_dark"
        android:layoutDirection="locale"
        android:layout_marginTop="20dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryPicker"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/black"
            app:ccp_textSize="10sp"/>

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            style="@style/addressTextStyle"
            android:layout_marginStart="10dp"
            android:hint="@string/mobile" />

    </LinearLayout>

    <EditText
        android:id="@+id/streetField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_example"
        style="@style/addressTextStyle"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/apartmentField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apartment_example"
        style="@style/addressTextStyle"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/countryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebanon"
        style="@style/addressTextStyle"
        android:enabled="false"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/stateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_shopping"
        style="@style/addressTextStyle"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/cityField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        style="@style/addressTextStyle"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/postalCodeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postal_code"
        style="@style/addressTextStyle"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layoutDirection="locale">


        <TextView
            android:id="@+id/setDefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_default_shipping_address"
            style="@style/addressTextStyle"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layoutDirection="locale"/>
    </RelativeLayout>
</LinearLayout>