<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:elevation="1dp"
        android:layoutDirection="locale"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layoutDirection="locale"
                android:padding="8dp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="45dp"
                android:layout_toEndOf="@+id/back_arrow"
                android:text="@string/settings"
                style="@style/titleStyle"/>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/languageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            style="@style/titleStyle"
            android:gravity="start"
            android:textAllCaps="false"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layoutDirection="locale"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/englishRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/english"
                android:buttonTint="@color/purple_quico"
                style="@style/addressTextStyle"/>

            <RadioButton
                android:id="@+id/arabicRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arabic"
                android:buttonTint="@color/purple_quico"
                style="@style/addressTextStyle" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="25dp"
            android:background="@color/gray_dark" />

        <TextView
            android:id="@+id/logoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="15dp"
            style="@style/titleStyle"
            android:gravity="start"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:padding="12dp"
            android:text="@string/logout"
            style="@style/buttonStyle"
            app:cornerRadius="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray_dark" />

    </LinearLayout>
</LinearLayout>